--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7eaae1d7",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "57907087",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7d1a2a0b",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "417e5820",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "(1000, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2c2b61b6",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "76c608dc",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
        "max     100.00000     100.000000     100.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b9081742",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2dd97e26",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ae2822d1",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
        "1               completed          69             90             88  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
    "id": "bd42eda6",
    "metadata": {},
    "source": [
-    "### 3.8 Adding columns for \"Total Score\" and \"Average\""
+    "### 3.8 Adding columns for \"Total Score\" and \"Average\" (Feature Engineering)"
    ]
   },
   {
